remove css to stop double border

--- a/src/components/summary/_summary.scss
+++ b/src/components/summary/_summary.scss
@@ -4,8 +4,6 @@ $hub-row-spacing: 1.3rem;
 
 .summary {
   &__items {
-    // To stop double bottom border when there is only one item and a link or collapsibile follows the summary
-    margin-bottom: -1px;
     width: 100%;
     border-spacing: 0;
     border-collapse: collapse;
